--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# MRTK3 Specific Files
+MixedRealityToolkit.Generated/
+MRTK3/
+MRTK.Generated/
+XR/
+XRI/
